DBC22-1726: fixing z-index for side-panel

--- a/src/frontend/src/Components/Map.scss
+++ b/src/frontend/src/Components/Map.scss
@@ -76,7 +76,7 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      z-index: 1;
+      z-index: 20;
 
       @media (max-width: 767px) {
         transition: min-height 0.25s ease-in-out;
