--- a/src/frontend/src/Header.scss
+++ b/src/frontend/src/Header.scss
@@ -5,7 +5,7 @@
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: 27;
+	z-index: 20;
 	background: white;
 	padding: 0;
 	box-shadow: rgb(169, 169, 169) 0px 2px 10px 0px;
